k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: gopherify
  labels:
    name: gopherify
