k8s/users-service.yml
apiVersion: v1
kind: Service
metadata:
  name: users-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: users
  ports:
    - port: 80
      targetPort: 8080
